--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <app-navbar></app-navbar>
-<div class="container">
+<ngx-spinner
+color="#191966"
+bdColor="rgba(0,0,0,0.1)"
+type="ball-scale-multiple"
+></ngx-spinner>
+<div>
     <router-outlet></router-outlet>
 </div>
