--- a/src/app/components/product/department/department-list/department-list.component.html
+++ b/src/app/components/product/department/department-list/department-list.component.html
@@ -1,12 +1,6 @@
 
 <div class="container">
-    <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
-          <li class="breadcrumb-item"><a href="#">Departments</a></li>
-        </ol>
-      </nav>
-    <h2>Departments</h2>
+    <h2><i class="fas fa-tags"></i> Departments</h2>
     <div class="row" style="margin-top:3%;" >
             <div style=" margin-bottom:2vh;" class="col-md-3" *ngFor="let dept of departments">
               
@@ -20,7 +14,7 @@
                     {{dept.depName}}
                 </div>
                 <a routerLink="/">
-                <img  style="width: 25vh;height: 25vh; opacity: 0.4;
+                <img  style="width: 40vh;height: 40vh; opacity: 0.4;
                 border-top-left-radius: 25%;
                 border-bottom-right-radius: 25%;" src="{{dept.image}}">
                 </a>
