--- a/src/app/components/product/product-list/product-list.component.html
+++ b/src/app/components/product/product-list/product-list.component.html
@@ -1,8 +1,16 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-<div *ngFor="let category of categories">
 <div class="container">
+<div class="row">
+<div style="height:1000px ;" class="col-md-3">
+    <app-category-list (updateCategory="onUpdateDeptCat($event)")></app-category-list>
+
+</div>
+
+<div *ngFor="let category of categories">
+
     <h3 class="h3">{{category.name}}</h3>
-    <div class="row" >
+    <div style="min-height: 100%;height: 100%;" class="row" >
+       
         <div *ngFor="let product of products">
         <div *ngIf="product.category.name==category.name">
         <div  class="col-md-3 col-sm-6"   style="margin-bottom: 2vh;" >
@@ -50,7 +58,7 @@
 
 
 </div>
-
+</div>
 </div>
 
 <hr>
