--- a/src/app/components/product/product-list/product-list.component.html
+++ b/src/app/components/product/product-list/product-list.component.html
@@ -1,19 +1,25 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-<div class="container">
+<div style="height: 10vh;
+position: relative;
+top: -2vh;
+background-image: url( https://cdn.pixabay.com/photo/2017/03/25/17/55/color-2174045_960_720.png);
+opacity: 0.8;
+background-repeat: no-repeat;background-size: cover;" class="">
+</div>
+<div class="container" >
 <div class="row">
-<div style="height:1000px ;" class="col-md-3">
-    <app-category-list (updateCategory="onUpdateDeptCat($event)")></app-category-list>
-
+<div>
+    <app-category-list class="category-menu"></app-category-list>
 </div>
 
 <div *ngFor="let category of categories">
 
     <h3 class="h3">{{category.name}}</h3>
-    <div style="min-height: 100%;height: 100%;" class="row" >
+    <div class="row"  style="margin-left: 13vh;">
        
         <div *ngFor="let product of products">
         <div *ngIf="product.category.name==category.name">
-        <div  class="col-md-3 col-sm-6"   style="margin-bottom: 2vh;" >
+        <div  class="col-md-4 col-sm-6"   style="margin-bottom: 2vh;" >
             <div class="product-grid">
                 <div class="product-image">
                     <a href="#" style="height: 30vh;">
@@ -100,5 +106,4 @@ h3.h3{text-align:center;margin:1em;text-transform:capitalize;font-size:1.7em;}
 .product-grid .add-to-cart{color:#000;font-size:13px;font-weight:600}
 @media only screen and (max-width:990px){.product-grid{margin-bottom:30px}
 }
-
 </style>
