--- a/src/app/components/product/product-list/product-list.component.html
+++ b/src/app/components/product/product-list/product-list.component.html
@@ -8,19 +8,20 @@ background-repeat: no-repeat;background-size: cover;" class="">
 </div>
 <div class="container" >
 <div class="row">
-<div>
-    <app-category-list class="category-menu"></app-category-list>
+<div class="" style="width: 20%; margin: 0;padding-left: 0;">
+    <app-category-list></app-category-list>
 </div>
 
-<div *ngFor="let category of categories">
+<div style="width: 70%;position: relative;left: 30%;top: -55vh;
+margin-left: 0;" *ngFor="let category of categories">
 
     <h3 class="h3">{{category.name}}</h3>
-    <div class="row"  style="margin-left: 13vh;">
+    <div class="row" >
        
         <div *ngFor="let product of products">
         <div *ngIf="product.category.name==category.name">
-        <div  class="col-md-4 col-sm-6"   style="margin-bottom: 2vh;" >
-            <div class="product-grid">
+        <div  class="col-md-4" >
+            <div class="product-grid" style="margin-bottom: 2vh;">
                 <div class="product-image">
                     <a href="#" style="height: 30vh;">
                         <img class="pic-1" src="../../../../assets/images/product/product-list/{{product.category.name}}/{{product.name.split(' ').join('_')}}/{{product.image1}}">
