added register form

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,6 @@
+
 <app-home-slider></app-home-slider>
-<app-product-list></app-product-list>
+<app-home-department-list></app-home-department-list>
 <style>
 * {
     margin: 0;
