--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,24 +11,48 @@
         <a class="navbar-brand" href="#" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         color: black;font-size: 24px;">
         
-        <i style="color: rgb(0, 0, 153);font-size: 120%;" class="fas fa-shopping-basket"></i>My-Boutique</a>
+        <i style="color: rgb(0, 0, 153);font-size: 120%;margin-right: 1vh" class="fas fa-shopping-basket"></i>My-Boutique</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a routerLink="/departments">Departments <span class="sr-only">(current)</span></a></li>
           <li  class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu ">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="false" ><i class="fas fa-align-justify"></i> Browse <span class="caret"></span></a>
+            <ul class="dropdown-menu" style="width: 150vh;">
+              <div class="row">
+               
+                    <div
+                    style="margin-left: 3vh;"              
+                     *ngFor="let department of departments">
+                     <div class="col-md-3" 
+                     
+                     >
+                     <a style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                     font-weight: bold;color: black;"
+                     href="/products/{{department.depName}}/all">
+                     {{department.depName}}
+              </a>
+                     <div *ngFor="let category of categories"
+                     style="margin-left: 2vh;">
+                      <a style="
+                      color: cornflowerblue;
+                      font-weight: 100; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;"
+                       *ngIf="category.departmentDto.id==department.id"
+                       href="/products/{{department.depName}}/{{category.name}}">
+                          {{category.name}}
+            </a>
+                     </div>
+                    </div>
+                    </div>
+      
+              
+                  
+               
+              </div>
             </ul>
           </li>
+          <li class="active"><a routerLink="/departments">Departments <span class="sr-only">(current)</span></a></li>
+          
         </ul>
 
         <ul class="nav navbar-nav navbar-navLine navbar-right">
