--- a/src/app/components/product/department/department-list/department-list.component.html
+++ b/src/app/components/product/department/department-list/department-list.component.html
@@ -3,17 +3,18 @@
     <h2><i class="fas fa-tags"></i> Departments</h2>
     <div class="row" style="margin-top:3%;" >
             <div style=" margin-bottom:2vh;" class="col-md-3" *ngFor="let dept of departments">
-                <div style="position: absolute
-            ;top: 45%;
-            left: 17%;
-            font-size: 3vh;
+              
+                <div style="font-size: 3vh;
             color: black;
+            position: relative;
+            top:15vh;
+            right: -10vh;
             font-weight: bold;
             font-family: Trebuchet MS;">
-                    {{dept.depName}}
+                    {{dept.depName}} 
                 </div>
                 <a  [routerLink]="['/products', dept.depName,'all']">
-                <img  style="width: 28vh;height: 28vh; opacity: 0.4;
+                <img  style="width: 100%;height: 25vh; opacity: 0.4;
                 border-top-left-radius: 25%;
                 border-bottom-right-radius: 25%;" src="{{dept.image}}">
                 </a>
