--- a/src/app/components/customer/register/register.component.html
+++ b/src/app/components/customer/register/register.component.html
@@ -14,33 +14,33 @@
             <form class="form">
                 <div class="form-group col-md-6">
                     <label>First name: * </label>
-                    <input class="form-control custom-input">
+                    <input name="firstName" [(ngModel)]="registerModel.firstName" class="form-control custom-input">
                 </div>
 
                 <div class="form-group col-md-6">
                     <label>Last name: * </label>
-                    <input class="form-control custom-input">
+                    <input name="lastName" [(ngModel)]="registerModel.lastName" class="form-control custom-input">
                 </div>
                 <div class="form-group col-md-6">
                     <label>Username: * </label>
-                    <input class="form-control custom-input">
+                    <input name="username" [(ngModel)]="registerModel.username" class="form-control custom-input">
                 </div>
                 <div class="form-group col-md-12">
                     <label>E-Mail: * </label>
-                    <input class="form-control custom-input">
+                    <input type="email" name="email" [(ngModel)]="registerModel.email" class="form-control custom-input">
                 </div>
 
                 <div class="form-group col-md-12">
                     <label>Password: * </label>
-                    <input class="form-control custom-input">
+                    <input type="password" name="password" [(ngModel)]="registerModel.password" class="form-control custom-input">
                 </div>
 
                 <div class="form-group col-md-12">
                     <label>Repeat Password: * </label>
-                    <input class="form-control custom-input">
+                    <input type="password" name="confirmPassword" [(ngModel)]="registerModel.confirmPassword" class="form-control custom-input">
                 </div>
                 <div class="form-group col-md-12">
-                <button class="btn btn-success">Confirm</button>
+                <button class="btn btn-success" (click)="submitRegister()">Confirm</button>
                 </div>
             </form>
         </div>
