--- a/src/app/components/product/product-list/product-list.component.html
+++ b/src/app/components/product/product-list/product-list.component.html
@@ -51,7 +51,7 @@ background-repeat: no-repeat;background-size: cover;" class="">
                                         <li><a [routerLink]="['/product/Details', product.id]" href="" data-tip="Quick View"><i class="fa fa-search"></i></a></li>
                                         <li><a href="" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a>
                                         </li>
-                                        <li><a href="" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a>
+                                        <li><a (click)="addProductToCart(product.id)" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a>
                                         </li>
                                     </ul>
                                     <span class="product-new-label"
