--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -74,7 +74,8 @@
             
         </li>
         <li >
-              <a routerLink="/cart-details"> <i class="fas fa-shopping-basket" style="color: rgb(56, 56, 56);font-size: 150%;"></i></a>
+              <a routerLink="/cart-details"> <i class="fas fa-shopping-basket" style="color: rgb(56, 56, 56);font-size: 150%;"></i><span class="badge cart-badge">{{cartNbItems}}</span></a>
+              
         </li>
       
 
