--- a/src/app/components/product/product-details/product-details.component.html
+++ b/src/app/components/product/product-details/product-details.component.html
@@ -31,7 +31,7 @@
                 </select>
 
                 <br>
-                <button class="custom-primary-btn">ADD TO CART</button>
+                <button (click)="addProductToCart(product.id)" class="custom-primary-btn">ADD TO CART</button>
 
             </form>
             <div class="col-md-8">
