--- a/src/app/components/product/product-details/product-details.component.css
+++ b/src/app/components/product/product-details/product-details.component.css
@@ -1,3 +1,12 @@
+.content
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 .lev-2-header{
     font-size: 2vh;
     color: gray;
