--- a/src/app/components/product/product-details/product-details.component.html
+++ b/src/app/components/product/product-details/product-details.component.html
@@ -1,4 +1,5 @@
-<div class="row" style="position: relative;top: -1.3vh;">
+
+<div class="row content" style="position: relative;top: -1.3vh;">
     <div class="col-md-5" style="background-color: black;">
         <div class="slide">
             <img width="100%" src="../../../../assets/images/product/product-list/Phones/Iphone_11/pic1.jpg" alt="">
@@ -7,7 +8,7 @@
 
 
     <div class="col-md-6">
-        <div class="container" style="margin-top: 16vh;margin-left: 4vh;
+        <div style="margin-top: 16vh;margin-left: 4vh;
          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;color: black;">
             <div class="lev-2-header">{{product.category.name}}</div> <span *ngIf="product.discount>0" class="badge"
                 style="background-color: red;padding: 1vh;">- %{{product.discount}}</span>
