--- a/src/app/components/product/product-list/product-list.component.html
+++ b/src/app/components/product/product-list/product-list.component.html
@@ -6,98 +6,104 @@ background-image: url( https://cdn.pixabay.com/photo/2017/03/25/17/55/color-2174
 opacity: 0.8;
 background-repeat: no-repeat;background-size: cover;" class="">
 </div>
-<div class="container">
-   
-    <div class="row">
-        <div class="col-md-3">
-            <app-category-list></app-category-list>
+<div class="container content">
+
+  <div class="row">
+      <div class="col-md-3">
+        <app-category-list></app-category-list>
+      </div>
+      <div class="col-md-9">
+        <div class="col-md-6">
+          8 Products found !!
         </div>
-        <div class="col-md-9">
-            <div class="col-md-6">
-                8 Products found !! 
-            </div>
 
-            <div class="col-md-6" style="margin-left: 60vh;">
-                <form class="form">
-                    <div class="form-group row">
-                       <label class="col-md-4" for="sortId" style="margin-right: -7vh;margin-top: 0.4vh;">Sort By</label> 
-                        <select (change)="updateProductListSelectHandler($event)" id="sortId" class="form-control " style="width: 40%;">
-                            <option value="Top-Rated">Top Rated</option>
-                            <option value="Newest">Newest</option>
-                            <option value="Highest-price">Price: $$$ - $</option>
-                            <option value="Lowest-price">Price: $   - $$$</option>
-                        </select>
-                    </div>
-            </form>
+        <div class="col-md-6" style="margin-left: 60vh;">
+          <form class="form">
+            <div class="form-group row">
+              <label class="col-md-4" for="sortId" style="margin-right: -7vh;margin-top: 0.4vh;">Sort By</label>
+              <select (change)="updateProductListSelectHandler($event)" id="sortId" class="form-control "
+                style="width: 40%;">
+                <option value="Top-Rated">Top Rated</option>
+                <option value="Newest">Newest</option>
+                <option value="Highest-price">Price: $$$ - $</option>
+                <option value="Lowest-price">Price: $ - $$$</option>
+              </select>
             </div>
-            <div *ngFor="let category of categories">
+          </form>
+        </div>
+        <div *ngFor="let category of categories">
 
-                <h3 class="col-md-12" style="margin-left:40% ;
+          <h3 class="col-md-12" style="margin-left:40% ;
                 font-family: fantasy;
                 font-size: 2.5vh;"> {{category.name}} </h3>
 
-                <div *ngFor="let product of products">
-                    <div *ngIf="product.category.name==category.name">
-                        <div class="col-md-4">
-                            <div class="product-grid" style="margin-bottom: 2vh;">
-                                <div class="product-image">
-                                    <a href="#" style="height: 30vh;">
-                                        <img class="pic-1"
-                                            src="../../../../assets/images/product/product-list/{{product.category.name}}/{{product.name.split(' ').join('_')}}/{{product.image1}}">
-                                        <img class="pic-2"
-                                            src="../../../../assets/images/product/product-list/{{product.category.name}}/{{product.name.split(' ').join('_')}}/{{product.image2}}">
-                                    </a>
-                                    <ul class="social">
-                                        <li><a [routerLink]="['/product/Details', product.id]" href="" data-tip="Quick View"><i class="fa fa-search"></i></a></li>
-                                        <li *ngIf="product.status=='AVAILABLE'"><a (click)="addProductToCart(product.id)" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a>
-                                        </li>
-                                    </ul>
-                                    <span class="product-new-label"
-                                        [ngStyle]="{'background-color':product.status === 'AVAILABLE' ? 'green' : 'red' }">{{product.status}}</span>
-                                    <div class="" *ngIf="product.discount > 0"> <span
-                                            [ngStyle]="{'background-color':product.discount > 9 ? '#9e4646' : '#c1c497' }"
-                                            class="product-discount-label">%{{product.discount}}</span></div>
-                                </div>
-                                <ul class="rating">
-                                    <li class="fa fa-star"></li>
-                                    <li class="fa fa-star"></li>
-                                    <li class="fa fa-star"></li>
-                                    <li class="fa fa-star"></li>
-                                    <li class="fa fa-star disable"></li>
-                                </ul>
-                                <div class="product-content" >
-                                    <h3 class="title"><a href="#">{{product.name}}</a></h3>
-                                    <div class="price">${{product.price}}
-                                    
-                                            <span *ngIf="product.discount>0">${{product.priceBeforeDiscount}}</span>
-                                  
-                                       
-                                    </div>
-                                    <div *ngIf="product.status=='AVAILABLE'">
-                                        <button (click)="addProductToCart(product.id)" class="add-to-cart" >+ Add To Cart</button>
-                                    </div>
-                                    <div *ngIf="product.status=='DISCONTINUED'">
-                                        <button disabled (click)="addProductToCart(product.id)" class="add-to-cart" >Product discounted</button>
-                                    </div>
-                                   
-                                </div>
+          <div *ngFor="let product of products">
+            <div *ngIf="product.category.name==category.name">
+              <div class="col-md-4">
+                <div class="product-grid" style="margin-bottom: 2vh;">
+                  <div class="product-image">
+                    <a href="#" style="height: 30vh;">
+                      <img class="pic-1"
+                        src="../../../../assets/images/product/product-list/{{product.category.name}}/{{product.name.split(' ').join('_')}}/{{product.image1}}">
+                      <img class="pic-2"
+                        src="../../../../assets/images/product/product-list/{{product.category.name}}/{{product.name.split(' ').join('_')}}/{{product.image2}}">
+                    </a>
+                    <ul class="social">
+                      <li><a [routerLink]="['/product/Details', product.id]" href="" data-tip="Quick View"><i
+                            class="fa fa-search"></i></a></li>
+                      <li *ngIf="product.status=='AVAILABLE'"><a (click)="addProductToCart(product.id)"
+                          data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a>
+                      </li>
+                    </ul>
+                    <span class="product-new-label"
+                      [ngStyle]="{'background-color':product.status === 'AVAILABLE' ? 'green' : 'red' }">{{product.status}}</span>
+                    <div class="" *ngIf="product.discount > 0"> <span
+                        [ngStyle]="{'background-color':product.discount > 9 ? '#9e4646' : '#c1c497' }"
+                        class="product-discount-label">%{{product.discount}}</span></div>
+                  </div>
+                  <ul class="rating">
+                    <li class="fa fa-star"></li>
+                    <li class="fa fa-star"></li>
+                    <li class="fa fa-star"></li>
+                    <li class="fa fa-star"></li>
+                    <li class="fa fa-star disable"></li>
+                  </ul>
+                  <div class="product-content">
+                    <h3 class="title"><a href="#">{{product.name}}</a></h3>
+                    <div class="price">${{product.price}}
 
-                            </div>
-                        </div>
+                      <span *ngIf="product.discount>0">${{product.priceBeforeDiscount}}</span>
+
+
+                    </div>
+                    <div *ngIf="product.status=='AVAILABLE'">
+                      <button (click)="addProductToCart(product.id)" class="add-to-cart">+ Add To Cart</button>
+                    </div>
+                    <div *ngIf="product.status=='DISCONTINUED'">
+                      <button disabled (click)="addProductToCart(product.id)" class="add-to-cart">Product
+                        discounted</button>
                     </div>
 
-
-
+                  </div>
 
                 </div>
-
-
-
-
-
+              </div>
             </div>
+
+
+
+
+          </div>
+
+
+
+
+
         </div>
     </div>
+  </div>
+
+
 </div>
 
 
@@ -106,232 +112,242 @@ background-repeat: no-repeat;background-size: cover;" class="">
 
 
 <style>
-    h3.h3 {
-        text-align: center;
-        margin: 1em;
-        text-transform: capitalize;
-        font-size: 1.7em;
-    }
 
-    /********************* shopping Demo-1 **********************/
+.content
+{
+    width: 95%;
+    height: 100%;
+    margin-left: 2.5%;
+    padding: 0px;
+    overflow-x: hidden;
+}
+  h3.h3 {
+    text-align: center;
+    margin: 1em;
+    text-transform: capitalize;
+    font-size: 1.7em;
+  }
+
+  /********************* shopping Demo-1 **********************/
+  .product-grid {
+    font-family: Raleway, sans-serif;
+    text-align: center;
+    padding: 0 0 72px;
+    border: 1px solid rgba(0, 0, 0, .1);
+    overflow: hidden;
+    position: relative;
+    z-index: 1
+  }
+
+  .product-grid .product-image {
+    position: relative;
+    transition: all .3s ease 0s
+  }
+
+  .product-grid .product-image a {
+    display: block
+  }
+
+  .product-grid .product-image img {
+    width: 100%;
+    height: auto
+  }
+
+  .product-grid .pic-1 {
+    opacity: 1;
+    transition: all .3s ease-out 0s
+  }
+
+  .product-grid:hover .pic-1 {
+    opacity: 1
+  }
+
+  .product-grid .pic-2 {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all .3s ease-out 0s
+  }
+
+  .product-grid:hover .pic-2 {
+    opacity: 1
+  }
+
+  .product-grid .social {
+    width: 150px;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    opacity: 0;
+    transform: translateY(-50%) translateX(-50%);
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    z-index: 1;
+    transition: all .3s ease 0s
+  }
+
+  .product-grid:hover .social {
+    opacity: 1;
+    top: 50%
+  }
+
+  .product-grid .social li {
+    display: inline-block
+  }
+
+  .product-grid .social li a {
+    color: #fff;
+    background-color: #333;
+    font-size: 16px;
+    line-height: 40px;
+    text-align: center;
+    height: 40px;
+    width: 40px;
+    margin: 0 2px;
+    display: block;
+    position: relative;
+    transition: all .3s ease-in-out
+  }
+
+  .product-grid .social li a:hover {
+    color: #fff;
+    background-color: #ef5777
+  }
+
+  .product-grid .social li a:after,
+  .product-grid .social li a:before {
+    content: attr(data-tip);
+    color: #fff;
+    background-color: #000;
+    font-size: 12px;
+    letter-spacing: 1px;
+    line-height: 20px;
+    padding: 1px 5px;
+    white-space: nowrap;
+    opacity: 0;
+    transform: translateX(-50%);
+    position: absolute;
+    left: 50%;
+    top: -30px
+  }
+
+  .product-grid .social li a:after {
+    content: '';
+    height: 15px;
+    width: 15px;
+    border-radius: 0;
+    transform: translateX(-50%) rotate(45deg);
+    top: -20px;
+    z-index: -1
+  }
+
+  .product-grid .social li a:hover:after,
+  .product-grid .social li a:hover:before {
+    opacity: 1
+  }
+
+  .product-grid .product-discount-label,
+  .product-grid .product-new-label {
+    color: #fff;
+    background-color: #ef5777;
+    font-size: 12px;
+    text-transform: uppercase;
+    padding: 2px 7px;
+    display: block;
+    position: absolute;
+    top: 10px;
+    left: 0
+  }
+
+  .product-grid .product-discount-label {
+    background-color: #333;
+    left: auto;
+    right: 0
+  }
+
+  .product-grid .rating {
+    color: #FFD200;
+    font-size: 12px;
+    padding: 12px 0 0;
+    margin: 0;
+    list-style: none;
+    position: relative;
+    z-index: -1
+  }
+
+  .product-grid .rating li.disable {
+    color: rgba(0, 0, 0, .2)
+  }
+
+  .product-grid .product-content {
+    background-color: #fff;
+    text-align: center;
+    padding: 12px 0;
+    margin: 0 auto;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -27px;
+    z-index: 1;
+    transition: all .3s
+  }
+
+  .product-grid:hover .product-content {
+    bottom: 0
+  }
+
+  .product-grid .title {
+    font-size: 13px;
+    font-weight: 400;
+    letter-spacing: .5px;
+    text-transform: capitalize;
+    margin: 0 0 10px;
+    transition: all .3s ease 0s
+  }
+
+  .product-grid .title a {
+    color: #828282
+  }
+
+  .product-grid .title a:hover,
+  .product-grid:hover .title a {
+    color: #ef5777
+  }
+
+  .product-grid .price {
+    color: #333;
+    font-size: 17px;
+    font-family: Montserrat, sans-serif;
+    font-weight: 700;
+    letter-spacing: .6px;
+    margin-bottom: 8px;
+    text-align: center;
+    transition: all .3s
+  }
+
+  .product-grid .price span {
+    color: #999;
+    font-size: 13px;
+    font-weight: 400;
+    text-decoration: line-through;
+    margin-left: 3px;
+    display: inline-block
+  }
+
+  .product-grid .add-to-cart {
+    color: #000;
+    font-size: 12px;
+    font-weight: 600;
+    border: none;
+    background-color: white;
+  }
+
+  @media only screen and (max-width:990px) {
     .product-grid {
-        font-family: Raleway, sans-serif;
-        text-align: center;
-        padding: 0 0 72px;
-        border: 1px solid rgba(0, 0, 0, .1);
-        overflow: hidden;
-        position: relative;
-        z-index: 1
+      margin-bottom: 30px
     }
+  }
 
-    .product-grid .product-image {
-        position: relative;
-        transition: all .3s ease 0s
-    }
-
-    .product-grid .product-image a {
-        display: block
-    }
-
-    .product-grid .product-image img {
-        width: 100%;
-        height: auto
-    }
-
-    .product-grid .pic-1 {
-        opacity: 1;
-        transition: all .3s ease-out 0s
-    }
-
-    .product-grid:hover .pic-1 {
-        opacity: 1
-    }
-
-    .product-grid .pic-2 {
-        opacity: 0;
-        position: absolute;
-        top: 0;
-        left: 0;
-        transition: all .3s ease-out 0s
-    }
-
-    .product-grid:hover .pic-2 {
-        opacity: 1
-    }
-
-    .product-grid .social {
-        width: 150px;
-        padding: 0;
-        margin: 0;
-        list-style: none;
-        opacity: 0;
-        transform: translateY(-50%) translateX(-50%);
-        position: absolute;
-        top: 60%;
-        left: 50%;
-        z-index: 1;
-        transition: all .3s ease 0s
-    }
-
-    .product-grid:hover .social {
-        opacity: 1;
-        top: 50%
-    }
-
-    .product-grid .social li {
-        display: inline-block
-    }
-
-    .product-grid .social li a {
-        color: #fff;
-        background-color: #333;
-        font-size: 16px;
-        line-height: 40px;
-        text-align: center;
-        height: 40px;
-        width: 40px;
-        margin: 0 2px;
-        display: block;
-        position: relative;
-        transition: all .3s ease-in-out
-    }
-
-    .product-grid .social li a:hover {
-        color: #fff;
-        background-color: #ef5777
-    }
-
-    .product-grid .social li a:after,
-    .product-grid .social li a:before {
-        content: attr(data-tip);
-        color: #fff;
-        background-color: #000;
-        font-size: 12px;
-        letter-spacing: 1px;
-        line-height: 20px;
-        padding: 1px 5px;
-        white-space: nowrap;
-        opacity: 0;
-        transform: translateX(-50%);
-        position: absolute;
-        left: 50%;
-        top: -30px
-    }
-
-    .product-grid .social li a:after {
-        content: '';
-        height: 15px;
-        width: 15px;
-        border-radius: 0;
-        transform: translateX(-50%) rotate(45deg);
-        top: -20px;
-        z-index: -1
-    }
-
-    .product-grid .social li a:hover:after,
-    .product-grid .social li a:hover:before {
-        opacity: 1
-    }
-
-    .product-grid .product-discount-label,
-    .product-grid .product-new-label {
-        color: #fff;
-        background-color: #ef5777;
-        font-size: 12px;
-        text-transform: uppercase;
-        padding: 2px 7px;
-        display: block;
-        position: absolute;
-        top: 10px;
-        left: 0
-    }
-
-    .product-grid .product-discount-label {
-        background-color: #333;
-        left: auto;
-        right: 0
-    }
-
-    .product-grid .rating {
-        color: #FFD200;
-        font-size: 12px;
-        padding: 12px 0 0;
-        margin: 0;
-        list-style: none;
-        position: relative;
-        z-index: -1
-    }
-
-    .product-grid .rating li.disable {
-        color: rgba(0, 0, 0, .2)
-    }
-
-    .product-grid .product-content {
-        background-color: #fff;
-        text-align: center;
-        padding: 12px 0;
-        margin: 0 auto;
-        position: absolute;
-        left: 0;
-        right: 0;
-        bottom: -27px;
-        z-index: 1;
-        transition: all .3s
-    }
-
-    .product-grid:hover .product-content {
-        bottom: 0
-    }
-
-    .product-grid .title {
-        font-size: 13px;
-        font-weight: 400;
-        letter-spacing: .5px;
-        text-transform: capitalize;
-        margin: 0 0 10px;
-        transition: all .3s ease 0s
-    }
-
-    .product-grid .title a {
-        color: #828282
-    }
-
-    .product-grid .title a:hover,
-    .product-grid:hover .title a {
-        color: #ef5777
-    }
-
-    .product-grid .price {
-        color: #333;
-        font-size: 17px;
-        font-family: Montserrat, sans-serif;
-        font-weight: 700;
-        letter-spacing: .6px;
-        margin-bottom: 8px;
-        text-align: center;
-        transition: all .3s
-    }
-
-    .product-grid .price span {
-        color: #999;
-        font-size: 13px;
-        font-weight: 400;
-        text-decoration: line-through;
-        margin-left: 3px;
-        display: inline-block
-    }
-
-    .product-grid .add-to-cart {
-        color: #000;
-        font-size: 12px;
-        font-weight: 600;
-        border: none;
-        background-color: white;
-    }
-
-    @media only screen and (max-width:990px) {
-        .product-grid {
-            margin-bottom: 30px
-        }
-    }
 </style>
