--- a/src/app/components/customer/cart-details/cart-details.component.html
+++ b/src/app/components/customer/cart-details/cart-details.component.html
@@ -1,7 +1,10 @@
 <div class="container">
-    <h2>Shopping cart <i class="fas fa-shopping-cart"></i></h2>
-    <div class="row" >
-
+    <div class="row" *ngIf="orderItems.length==0">
+        <h3> You have no item in your cart !!</h3>
+        <a href="/products/Electronics/all"><i class="fas fa-angle-double-left"></i> Go back to shopping.</a>
+    </div>
+    <div class="row" *ngIf="orderItems.length!=0">
+        <h2>Shopping cart <i class="fas fa-shopping-cart"></i></h2>
         <div class="col-md-8" >
             <div class="cart-product col-md-12" *ngFor="let item of orderItems">
                 <h3>"{{item.product.category.name}}" Category</h3>
@@ -41,7 +44,7 @@
             </div>
 
             <div class="col-md-12">
-                <button class="checkout-button">Checkout</button>
+                <button [routerLink]="['/checkout',orderItems[0].orderId]" class="checkout-button">Checkout</button>
             </div>
         </div>
        
