--- a/src/app/components/product/product-details/product-details.component.css
+++ b/src/app/components/product/product-details/product-details.component.css
@@ -111,3 +111,52 @@ font-family: 'Times New Roman', Times, serif;
     text-align:left;
     
 }
+
+.review-form{
+    margin-top: 5%;
+    width: 100%;
+    border-radius: 4vh;
+    background-color: #edf5fd;
+    padding: 2%;
+    
+}
+
+.form-control{
+    border-radius: 2vh;
+}
+.review-btn{
+    border: 0;
+    color: black;
+    background-color: white;
+    
+    padding: 1%;
+    margin-left: 6%;
+    text-transform: uppercase;
+}
+
+
+
+
+.slider {
+    margin-top: 6%;
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;  
+    background: #afafaf;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%; 
+    background: rgb(93, 93, 93);
+    cursor: pointer;
+  }
+  
