checkout confirmation working
The only thing to do is to update cart status.

--- a/src/app/components/product/product-details/product-details.component.css
+++ b/src/app/components/product/product-details/product-details.component.css
@@ -104,7 +104,8 @@ font-family: 'Times New Roman', Times, serif;
     display:inline;
     font-size: 1.7vh;
     position: relative;
-    top: 4%;
+    top: -1.5vh;
+    color: teal;
 }
 .block_container
 {
