--- a/src/app/components/order/checkout/checkout.component.css
+++ b/src/app/components/order/checkout/checkout.component.css
@@ -46,3 +46,18 @@
 .payment-method-radio{
     margin-top: 6%;
 }
+
+.order-information{
+    padding: 1%;
+    padding-left: 4%;
+    border: 2px solid gainsboro;
+    margin-top: 4%;
+    box-shadow: 1px 1px 1px gray ;
+}
+
+.products{
+    text-transform: uppercase;
+    font-family: monospace;
+    font-size: 130%;
+    color: slategrey;
+}
