--- a/src/app/components/product/product-details/product-details.component.html
+++ b/src/app/components/product/product-details/product-details.component.html
@@ -44,14 +44,22 @@
                 <div class="review-list col-md-11">
                     <div class="review-item" *ngFor="let review of reviews">
                         <div class="block_container">
-                            <div class="bloc1">
+                            <div class="bloc1 col-md-6">
                                 {{review.title}}
                             </div>
                             <div class="bloc2">
-                                {{review.rating}}
+                            
+
+                               
                             </div>
-                            <div class="bloc3">
-                                /5
+                            <div class="bloc3 col-md-6">
+                                
+                                <div class="col-md-1"  *ngIf="review.rating >= 1"><i class="far fa-star"></i></div>
+                                <div class="col-md-1"  *ngIf="review.rating >= 2"><i class="far fa-star"></i></div>
+                                <div class="col-md-1" *ngIf="review.rating >= 3"><i class="far fa-star"></i></div>
+                                <div class="col-md-1" *ngIf="review.rating >= 4"><i class="far fa-star"></i></div>
+                                <div class="col-md-1" *ngIf="review.rating >= 5"><i class="far fa-star"></i></div>
+                            
                             </div>
                         </div>
                         <p class="review-description">{{review.description}}</p>
@@ -68,7 +76,7 @@
                             </div>
 
                             <div class="slidecontainer col-md-4">
-                                <input [(ngModel)]="review.rating" name="rating" type="range" min="0.5" max="5" step="0.5"  class="slider" id="myRange">
+                                <input [(ngModel)]="review.rating" name="rating" type="range" min="1" max="5" step="1"  class="slider" id="myRange">
                                 <div style="color: teal;">rating: {{review.rating}}</div>
                             </div>
                             <div class="form-group col-md-12">
