home and footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@ color="#191966"
 bdColor="rgba(0,0,0,0.1)"
 type="ball-scale-multiple"
 ></ngx-spinner>
-<div>
+<div class="content">
     <router-outlet></router-outlet>
 </div>
+
