--- a/src/app/components/product/product-details/product-details.component.html
+++ b/src/app/components/product/product-details/product-details.component.html
@@ -1,8 +1,8 @@
 
 <div class="row content" style="position: relative;top: -1.3vh;">
-    <div class="col-md-5" style="background-color: black;">
+    <div class="col-md-5" style="background-color: white;">
         <div class="slide">
-            <img width="100%" src="../../../../assets/images/product/product-list/Phones/Iphone_11/pic1.jpg" alt="">
+            <img width="100%" src="../../../../assets/images/product/product-list/{{product.image1}}" alt="">
         </div>
     </div>
 
