--- a/src/app/components/product/product-list/product-list.component.html
+++ b/src/app/components/product/product-list/product-list.component.html
@@ -44,9 +44,10 @@ background-repeat: no-repeat;background-size: cover;" class="">
                   <div class="product-image">
                     <a href="#" style="height: 30vh;">
                       <img class="pic-1"
-                        src="../../../../assets/images/product/product-list/{{product.category.name}}/{{product.name.split(' ').join('_')}}/{{product.image1}}">
+                        src="../../../../assets/images/product/product-list/{{product.image1}}">
+                      
                       <img class="pic-2"
-                        src="../../../../assets/images/product/product-list/{{product.category.name}}/{{product.name.split(' ').join('_')}}/{{product.image2}}">
+                      src="../../../../assets/images/product/product-list/{{product.image2}}">
                     </a>
                     <ul class="social">
                       <li><a [routerLink]="['/product/Details', product.id]" href="" data-tip="Quick View"><i
