--- a/src/app/components/customer/cart-details/cart-details.component.html
+++ b/src/app/components/customer/cart-details/cart-details.component.html
@@ -8,7 +8,7 @@
         <div class="col-md-8" >
             <div class="cart-product col-md-12" *ngFor="let item of orderItems">
                 <h3>"{{item.product.category.name}}" Category</h3>
-                <img src="../../../../assets/images/product/product-list/{{item.product.category.name}}/{{item.product.name.split(' ').join('_')}}/{{item.product.image1}}"
+                <img src="../../../../assets/images/product/product-list/{{item.product.image1}}"
                     class="product-image col-md-3" />
                 <div class="col-md-3">
                    <a [routerLink]="['/product/Details', item.product.id]"> <h4 style="width: 100%;">{{item.product.name}}</h4> </a> 
