--- a/src/app/components/home/home-slider/home-slider.component.html
+++ b/src/app/components/home/home-slider/home-slider.component.html
@@ -11,7 +11,7 @@
             [showArrows]="false">
         </slideshow>
         <button style="width: 17%" class="btn btn-primary inside-picture">Best sells categories</button>
-        <button class="btn btn-default inside-picture inside-picture-light">Explore</button>
+        <a href="/departments" class="btn btn-default inside-picture inside-picture-light">Explore</a>
     </div>
 
 
